[tool.poetry]
name = "philipy"
version = "0.1.0"
description = "utility to manage philip hue"
authors = ["Emmanuel Arias <eamanu@yaerobi.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "python3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
